# ai-providers

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  install.ps1  install.sh
.gitea/scripts/: compare_versions.py  latest_semver_tag.py
.gitea/workflows/: release.yml
.github/workflows/: pr-check.yml  release.yml
docs/: architecture.md  build-exceptions.md
docs/superpowers/plans/: 2026-03-19-gitea-release-action.md  2026-03-23-homebrew-tap-automation.md
docs/superpowers/specs/: 2026-03-19-gitea-release-action-design.md  2026-03-23-homebrew-tap-automation-design.md
packaging/homebrew/: ai-providers.rb.template  aip.rb.template
scripts/ci/: check_release_needed.sh  package_binary.sh  read_cargo_version.sh
src/: main.rs  util.rs
src/commands/: add.rs  completion.rs  config.rs  current.rs  delete.rs  edit.rs  list.rs  mod.rs  show.rs  use_cmd.rs
src/config/: paths.rs
src/profile/: manager.rs  storage.rs
src/provider/: claude.rs  mod.rs
src/tui/: app.rs  event.rs  handler.rs  mod.rs  ui.rs
tests/: ci_scripts.rs
