[package]
name = "ai-providers"
version = "1.1.0"
edition = "2021"
description = "Manage AI tool configuration profiles from the command line"
homepage = "https://github.com/Albert556/ai-providers"
repository = "https://github.com/Albert556/ai-providers"

[[bin]]
name = "aip"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.1"
ratatui = "0.29"
crossterm = "0.28"
